Add membership section to home page

--- a/index.html
+++ b/index.html
@@ -12,13 +12,14 @@
 </head>
 
 <body>
+    <!-- HERO -->
     <header class="hero home__hero">
         <div class="container">
             <div class="hero__navigation">
                 <h2 class="hero__brand">
                     <a href="#" class="button">Titan Fitness</a>
                 </h2>
-                <ul class="navigation__list">
+                <ul class="horizontal-list">
                     <li> <a href="index.html" class="button">Home</a></li>
                     <li> <a href="#" class="button">Classes</a></li>
                     <li> <a href="#" class="button">Trainers</a></li>
@@ -32,30 +33,78 @@
         </div>
     </header>
 
-    <section class="benefits section-padding">
+    <!-- BENEFITS -->
+    <section class="benefits section">
         <div class="container">
-            <h2 class="benefits-header section-header capitalize">What you get</h2>
-            <div class="benefits__cards">
-                <div class="benefits__card">
-                    <i class="fas fa-burn fa-2x benefits__icon"></i>
-                    <h3 class="benefits__card-header">Great class variety</h3>
-                    <span class="benefits__text">Get an awesome workout from any of our classes</span>
+            <h2 class="benefits-header section-header">What you get</h2>
+            <div class="benefit__cards">
+
+                <!-- Each div is a card -->
+
+                <div>
+                    <i class="fas fa-burn fa-2x benefit__card-icon"></i>
+                    <h3 class="benefit__card-header">Great class variety</h3>
+                    <span class="benefit__card-text">Get an awesome workout from any of our classes</span>
                 </div>
-                <div class="benefits__card">
-                    <i class="fas fa-heartbeat fa-2x benefits__icon"></i>
-                    <h3 class="benefits__card-header">Superb trainers</h3>
-                    <span class="benefits__text">Workout with the world's greatest trainers</span>
+                <div>
+                    <i class="fas fa-heartbeat fa-2x benefit__card-icon"></i>
+                    <h3 class="benefit__card-header">Superb trainers</h3>
+                    <span class="benefit__card-text">Workout with the world's greatest trainers</span>
                 </div>
-                <div class="benefits__card">
-                    <i class="fas fa-dumbbell fa-2x benefits__icon"></i>
-                    <h3 class="benefits__card-header">Tons of equipment</h3>
-                    <span class="benefits__text">You'll never have to wait in line to workout</span>
+                <div>
+                    <i class="fas fa-dumbbell fa-2x benefit__card-icon"></i>
+                    <h3 class="benefit__card-header">Tons of equipment</h3>
+                    <span class="benefit__card-text">You'll never have to wait in line to workout</span>
                 </div>
-                <div class="benefits__card">
-                    <i class="far fa-clock fa-2x benefits__icon"></i>
-                    <h3 class="benefits__card-header">Open 24/7</h3>
-                    <span class="benefits__text">Workout out at any time that fits your schedule</span>
+                <div>
+                    <i class="far fa-clock fa-2x benefit__card-icon"></i>
+                    <h3 class="benefit__card-header">Open 24/7</h3>
+                    <span class="benefit__card-text">Workout out at any time that fits your schedule</span>
                 </div>
+            </div>
+        </div>
+    </section>
+
+
+    <section class="memberships section">
+        <h2 class="memberships__heading section-header"> Our Pricing Plans </h2>
+        <div class="memberships__cards">
+            <div>
+                <h2 class="membership__card-plan">Standard</h2>
+                <h4 class="membership__card-reacharge-rate"> &#47;monthly</h4>
+                <h2 class="membership__card-price">$20</h2>
+                <ul class="vertical-list membership__card-offerings">
+                    <li>Unlimited gym access</li>
+                    <li>10 classes</li>
+                    <li>3 training session</li>
+                    <li>4 massages</li>
+                </ul>
+                <a href="#" class="button button--dark-green">Choose it</a>
+
+            </div>
+            <div>
+                <h2 class="membership__card-plan">Recommended</h2>
+                <h4 class="membership__card-reacharge-rate"> &#47;monthly</h4>
+                <h2 class="membership__card-price">$35</h2>
+                <ul class="vertical-list membership__card-offerings">
+                    <li>Unlimited gym access</li>
+                    <li>25 classes</li>
+                    <li>10 training session</li>
+                    <li>15 massages</li>
+                </ul>
+                <a href="#" class="button button--dark-green">Choose it</a>
+            </div>
+            <div>
+                <h2 class="membership__card-plan">Premium</h2>
+                <h4 class="membership__card-reacharge-rate"> &#47;monthly</h2>
+                    <h2 class="membership__card-price">$45</h2>
+                    <ul class="vertical-list membership__card-offerings">
+                        <li>Unlimited gym access</li>
+                        <li>40 classes</li>
+                        <li>20 training session</li>
+                        <li>30 massages</li>
+                    </ul>
+                    <a href="#" class="button button--dark-green">Choose it</a>
             </div>
         </div>
     </section>
