Add website footer

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <div class="container">
             <div class="hero__navigation">
                 <h2 class="hero__brand">
-                    <a href="#" class="button">Titan Fitness</a>
+                    <a href="#" class="button"> <span class="hilight"> Titan </span> Fitness</a>
                 </h2>
                 <ul class="horizontal-list">
                     <li> <a href="index.html" class="button">Home</a></li>
@@ -69,6 +69,9 @@
     <section class="memberships section">
         <h2 class="memberships__heading section-header"> Our Pricing Plans </h2>
         <div class="memberships__cards">
+
+            <!-- Each div is a card -->
+
             <div>
                 <h2 class="membership__card-plan">Standard</h2>
                 <h4 class="membership__card-reacharge-rate"> &#47;monthly</h4>
@@ -109,18 +112,21 @@
         </div>
     </section>
 
-
-
-
-
-
-
-
-
-
-
-
-
+    <footer class="main-footer section">
+        <div class="container">
+            <div class="main-footer__contents">
+                <span class="main-footer__text">&copy; Copyright 2019 <span class="hilight"> Titan </span> Fitness. All
+                    rights
+                    reserved</span>
+                <ul class="horizontal-list">
+                    <li> <a href="#" class="button"> <i class="fab fa-twitter"></i> </a> </li>
+                    <li> <a href="#" class="button"> <i class="fab fa-instagram"></i> </a> </li>
+                    <li> <a href="#" class="button"> <i class="fab fa-linkedin"></i> </a> </li>
+                    <li> <a href="#" class="button"> <i class="fab fa-facebook-f"></i> </a> </li>
+                </ul>
+            </div>
+        </div>
+    </footer>
 
     <!-- <section class="course-teaser">
         <div class="container">
