--- a/index.html
+++ b/index.html
@@ -8,22 +8,27 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
         integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" media="screen and (max-width: 768px)" href="css/mobile.css">
+    <link rel="stylesheet" media="screen and (max-width: 768px)" href="css/menu.css">
     <title>Titan Fitness | Home</title>
 </head>
 
 <body>
     <!-- HERO -->
-    <header class="hero home__hero">
+    <header class="hero hero--home">
         <div class="container">
             <div class="hero__navigation">
                 <h2 class="hero__brand">
-                    <a href="#" class="button"> <span class="hilight"> Titan </span> Fitness</a>
+                    <a href="#" class="button button--light-green"> <span class="hilight"> Titan </span> Fitness</a>
                 </h2>
-                <ul class="horizontal-list">
-                    <li> <a href="index.html" class="button">Home</a></li>
-                    <li> <a href="#" class="button">Classes</a></li>
-                    <li> <a href="#" class="button">Trainers</a></li>
-                    <li> <a href="#" class="button">Join Now</a></li>
+
+                <i class="fas fa-bars hamburger-menu"></i>
+
+                <ul class="main-navigation horizontal-list">
+                    <li> <a href="index.html" class="button button--light-green">Home</a></li>
+                    <li> <a href="#" class="button button--light-green">Classes</a></li>
+                    <li> <a href="#" class="button button--light-green">Trainers</a></li>
+                    <li> <a href="#" class="button button--light-green">Join Now</a></li>
                 </ul>
             </div>
             <div class="hero__content">
@@ -32,6 +37,7 @@
             </div>
         </div>
     </header>
+
 
     <!-- BENEFITS -->
     <section class="benefits section">
@@ -83,8 +89,8 @@
                     <li>4 massages</li>
                 </ul>
                 <a href="#" class="button button--dark-green">Choose it</a>
-
             </div>
+
             <div>
                 <h2 class="membership__card-plan">Recommended</h2>
                 <h4 class="membership__card-reacharge-rate"> &#47;monthly</h4>
@@ -97,6 +103,7 @@
                 </ul>
                 <a href="#" class="button button--dark-green">Choose it</a>
             </div>
+
             <div>
                 <h2 class="membership__card-plan">Premium</h2>
                 <h4 class="membership__card-reacharge-rate"> &#47;monthly</h2>
@@ -112,6 +119,7 @@
         </div>
     </section>
 
+    <!-- FOOTER -->
     <footer class="main-footer section">
         <div class="container">
             <div class="main-footer__contents">
@@ -119,10 +127,10 @@
                     rights
                     reserved</span>
                 <ul class="horizontal-list">
-                    <li> <a href="#" class="button"> <i class="fab fa-twitter"></i> </a> </li>
-                    <li> <a href="#" class="button"> <i class="fab fa-instagram"></i> </a> </li>
-                    <li> <a href="#" class="button"> <i class="fab fa-linkedin"></i> </a> </li>
-                    <li> <a href="#" class="button"> <i class="fab fa-facebook-f"></i> </a> </li>
+                    <li> <a href="#" class="button button--light-green"> <i class="fab fa-twitter"></i> </a> </li>
+                    <li> <a href="#" class="button button--light-green"> <i class="fab fa-instagram"></i> </a> </li>
+                    <li> <a href="#" class="button button--light-green"> <i class="fab fa-linkedin"></i> </a> </li>
+                    <li> <a href="#" class="button button--light-green"> <i class="fab fa-facebook-f"></i> </a> </li>
                 </ul>
             </div>
         </div>
@@ -151,6 +159,11 @@
             </div>
         </div>
     </section> -->
+
+
+
+
+    <script src = "js/main.js"></script>
 </body>
 
 </html>
