--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
                 <i class="fas fa-bars hamburger-menu"></i>
 
-                <ul class="main-navigation horizontal-list">
+                <ul class="main-navigation">
                     <li> <a href="index.html" class="button button--light-green">Home</a></li>
                     <li> <a href="#" class="button button--light-green">Classes</a></li>
                     <li> <a href="#" class="button button--light-green">Trainers</a></li>
