Add responsiveness to pricing plans

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                     <li> <a href="#" class="button button--light-green">Trainers</a></li>
                     <li> <a href="#" class="button button--light-green">Join Now</a></li>
                 </ul>
-                
+
             </div>
             <div class="hero__content">
                 <h1 class="hero__header">Exercise your mind and body</h1>
@@ -74,49 +74,51 @@
 
 
     <section class="memberships section">
-        <h2 class="memberships__heading section-header"> Our Pricing Plans </h2>
-        <div class="memberships__cards">
+        <div class="container">
+            <h2 class="memberships__heading section-header"> Our Pricing Plans </h2>
+            <div class="memberships__cards">
 
-            <!-- Each div is a card -->
-            <div>
-                <h2 class="membership__card-plan">Standard</h2>
-                <h4 class="membership__card-reacharge-rate"> &#47;monthly</h4>
-                <h2 class="membership__card-price">$20</h2>
-                <ul class="vertical-list membership__card-offerings">
-                    <li>Unlimited gym access</li>
-                    <li>10 classes</li>
-                    <li>3 training session</li>
-                    <li>4 massages</li>
-                </ul>
-                <a href="#" class="button button--dark-green">Choose it</a>
-            </div>
-
-            <div>
-                <h2 class="membership__card-plan">Recommended</h2>
-                <h4 class="membership__card-reacharge-rate"> &#47;monthly</h4>
-                <h2 class="membership__card-price">$35</h2>
-                <ul class="vertical-list membership__card-offerings">
-                    <li>Unlimited gym access</li>
-                    <li>25 classes</li>
-                    <li>10 training session</li>
-                    <li>15 massages</li>
-                </ul>
-                <a href="#" class="button button--dark-green">Choose it</a>
-            </div>
-
-            <div>
-                <h2 class="membership__card-plan">Premium</h2>
-                <h4 class="membership__card-reacharge-rate"> &#47;monthly</h2>
-                    <h2 class="membership__card-price">$45</h2>
+                <!-- Each div is a card -->
+                <div>
+                    <h2 class="membership__card-plan">Standard</h2>
+                    <h4 class="membership__card-reacharge-rate"> &#47;monthly</h4>
+                    <h2 class="membership__card-price">$20</h2>
                     <ul class="vertical-list membership__card-offerings">
                         <li>Unlimited gym access</li>
-                        <li>40 classes</li>
-                        <li>20 training session</li>
-                        <li>30 massages</li>
+                        <li>10 classes</li>
+                        <li>3 training session</li>
+                        <li>4 massages</li>
                     </ul>
                     <a href="#" class="button button--dark-green">Choose it</a>
-            </div>
+                </div>
 
+                <div>
+                    <h2 class="membership__card-plan">Recommended</h2>
+                    <h4 class="membership__card-reacharge-rate"> &#47;monthly</h4>
+                    <h2 class="membership__card-price">$35</h2>
+                    <ul class="vertical-list membership__card-offerings">
+                        <li>Unlimited gym access</li>
+                        <li>25 classes</li>
+                        <li>10 training session</li>
+                        <li>15 massages</li>
+                    </ul>
+                    <a href="#" class="button button--dark-green">Choose it</a>
+                </div>
+
+                <div>
+                    <h2 class="membership__card-plan">Premium</h2>
+                    <h4 class="membership__card-reacharge-rate"> &#47;monthly</h2>
+                        <h2 class="membership__card-price">$45</h2>
+                        <ul class="vertical-list membership__card-offerings">
+                            <li>Unlimited gym access</li>
+                            <li>40 classes</li>
+                            <li>20 training session</li>
+                            <li>30 massages</li>
+                        </ul>
+                        <a href="#" class="button button--dark-green">Choose it</a>
+                </div>
+
+            </div>
         </div>
     </section>
 
@@ -164,7 +166,7 @@
 
 
 
-    <script src = "js/main.js"></script>
+    <script src="js/main.js"></script>
 </body>
 
 </html>
