--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
                 <i class="fas fa-bars hamburger-menu"></i>
 
                 <ul class="main-navigation">
-                    <li> <a href="index.html" class="button button--light-green">Home</a></li>
-                    <li> <a href="#" class="button button--light-green">Classes</a></li>
+                    <li> <a href="index.html" class="button button--light-green current">Home</a></li>
+                    <li> <a href="classes.html" class="button button--light-green">Classes</a></li>
                     <li> <a href="#" class="button button--light-green">Trainers</a></li>
                     <li> <a href="#" class="button button--light-green">Join Now</a></li>
                 </ul>
