Add classes to course  page

--- a/classes.html
+++ b/classes.html
@@ -38,14 +38,45 @@
         </div>
     </header>
 
+    <section class="group-fitness section">
+        <div class="container">
+            <div class="group-fitness__courses">
+
+                <!-- Each div is a class -->
+                <div>
+                    <img src="images/classes/yoga.jpg" alt="Yoga" class="group-fitness__course-image">
+                    <h2 class="group-fitness__course-name">Yoga</h2>
+                </div>
+                <div>
+                    <img src="images/classes/aerobics.jpg" alt="Aerobics" class="group-fitness__course-image">
+                    <h2 class="group-fitness__course-name"> Aerobics </h2>
+                </div>
+                <div>
+                    <img src="images/classes/boxing.jpg" alt="Kick Boxing" class="group-fitness__course-image">
+                    <h2 class="group-fitness__course-name">Kick Boxing</h2>
+                </div>
+                <div>
+                    <img src="images/classes/meditation.jpg" alt="Meditation" class="group-fitness__course-image">
+                    <h2 class="group-fitness__course-name">Meditation</h2>
+                </div>
+                <div>
+                    <img src="images/classes/strength.jpg" alt="Strength Training" class="group-fitness__course-image">
+                    <h2 class="group-fitness__course-name">Strength Training</h2>
+                </div>
+                <div>
+                    <img src="images/classes/zumba.jpg" alt="Zumba" class="group-fitness__course-image">
+                    <h2 class="group-fitness__course-name">Zumba</h2>
+                </div>
+            </div>
+        </div>
+    </section>
 
     <!-- FOOTER -->
     <footer class="main-footer section">
         <div class="container">
             <div class="main-footer__contents">
                 <span class="main-footer__text">&copy; Copyright 2019 <span class="hilight"> Titan </span> Fitness. All
-                    rights
-                    reserved</span>
+                    rights reserved </span>
                 <ul class="horizontal-list">
                     <li> <a href="#" class="button button--light-green"> <i class="fab fa-twitter"></i> </a> </li>
                     <li> <a href="#" class="button button--light-green"> <i class="fab fa-instagram"></i> </a> </li>
