--- a/index.html
+++ b/index.html
@@ -127,8 +127,7 @@
         <div class="container">
             <div class="main-footer__contents">
                 <span class="main-footer__text">&copy; Copyright 2019 <span class="hilight"> Titan </span> Fitness. All
-                    rights
-                    reserved</span>
+                    rights reserved </span>
                 <ul class="horizontal-list">
                     <li> <a href="#" class="button button--light-green"> <i class="fab fa-twitter"></i> </a> </li>
                     <li> <a href="#" class="button button--light-green"> <i class="fab fa-instagram"></i> </a> </li>
@@ -138,33 +137,6 @@
             </div>
         </div>
     </footer>
-
-    <!-- <section class="course-teaser">
-        <div class="container">
-            <h2 class="section-header">High quality classes</h2>
-            <a href="#" class="button button--dark-green">View all </a>
-            <div class="courses">
-                <div class="course">
-                    <img src="images/classes/aerobics.jpeg" alt="Aerobics" class="course__image">
-                    <h2 class="course__name">Aerobics</h2>
-                    <span class="course__description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptas, eveniet!</span>
-                </div>
-                <div class="course">
-                    <img src="images/classes/yoga.jpg" alt="Yoga" class="course__image">
-                    <h2 class="course__name">Yoga</h2>
-                    <span class="course__description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptas, eveniet!</span>
-                </div>
-                <div class="course">
-                    <img src="images/classes/meditation.jpg" alt="Meditation" class="course__image">
-                    <h2 class="course__name">Meditation</h2>
-                    <span class="course__description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptas, eveniet!</span>
-                </div>
-            </div>
-        </div>
-    </section> -->
-
-
-
 
     <script src="js/main.js"></script>
 </body>
