Add page for trainers

--- a/classes.html
+++ b/classes.html
@@ -26,8 +26,8 @@
 
                 <ul class="main-navigation">
                     <li> <a href="index.html" class="button button--light-green">Home</a></li>
-                    <li> <a href="#" class="button button--light-green current">Classes</a></li>
-                    <li> <a href="#" class="button button--light-green">Trainers</a></li>
+                    <li> <a href="classes.html" class="button button--light-green current">Classes</a></li>
+                    <li> <a href="trainers.html" class="button button--light-green">Trainers</a></li>
                     <li> <a href="#" class="button button--light-green">Join Now</a></li>
                 </ul>
 
@@ -86,7 +86,7 @@
             </div>
         </div>
     </footer>
-    
+
     <script src="js/main.js"></script>
 </body>
 
