Fix hamburger menu display bug

--- a/trainers.html
+++ b/trainers.html
@@ -15,7 +15,7 @@
 
 <body>
     <!-- HERO -->
-    <header class="hero hero--classes">
+    <header class="hero hero--secondary">
         <div class="container">
             <div class="hero__navigation">
                 <h2 class="hero__brand">
@@ -32,7 +32,7 @@
                 </ul>
 
             </div>
-            <div class="hero__content hero__classes-content">
+            <div class="hero__content hero__content--secondary">
                 <h1 class="hero__header">Our Trainers</h1>
             </div>
         </div>
