Add contact form to join now page

--- a/index.html
+++ b/index.html
@@ -28,13 +28,13 @@
                     <li> <a href="index.html" class="button button--light-green current">Home</a></li>
                     <li> <a href="classes.html" class="button button--light-green">Classes</a></li>
                     <li> <a href="trainers.html" class="button button--light-green">Trainers</a></li>
-                    <li> <a href="#" class="button button--light-green">Join Now</a></li>
+                    <li> <a href="joinNow.html" class="button button--light-green">Join Now</a></li>
                 </ul>
 
             </div>
             <div class="hero__content">
                 <h1 class="hero__header">Exercise your mind and body</h1>
-                <a href="#" class="button button--dark-green">Join Now</a>
+                <a href="joinNow.html" class="button button--dark-green">Join Now</a>
             </div>
         </div>
     </header>
@@ -89,7 +89,7 @@
                         <li>3 training session</li>
                         <li>4 massages</li>
                     </ul>
-                    <a href="#" class="button button--dark-green">Choose it</a>
+                    <a href="joinNow.html" class="button button--dark-green">Choose it</a>
                 </div>
 
                 <div>
@@ -102,7 +102,7 @@
                         <li>10 training session</li>
                         <li>15 massages</li>
                     </ul>
-                    <a href="#" class="button button--dark-green">Choose it</a>
+                    <a href="joinNow.html" class="button button--dark-green">Choose it</a>
                 </div>
 
                 <div>
@@ -115,7 +115,7 @@
                             <li>20 training session</li>
                             <li>30 massages</li>
                         </ul>
-                        <a href="#" class="button button--dark-green">Choose it</a>
+                        <a href="joinNow.html" class="button button--dark-green">Choose it</a>
                 </div>
 
             </div>
