--- a/trainers.html
+++ b/trainers.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" media="screen and (max-width: 768px)" href="css/mobile.css">
     <link rel="stylesheet" media="screen and (max-width: 768px)" href="css/menu.css">
-    <title>Titan Fitness | Home</title>
+    <title>Titan Fitness | Trainers</title>
 </head>
 
 <body>
@@ -28,7 +28,7 @@
                     <li> <a href="index.html" class="button button--light-green">Home</a></li>
                     <li> <a href="classes.html" class="button button--light-green">Classes</a></li>
                     <li> <a href="trainers.html" class="button button--light-green current">Trainers</a></li>
-                    <li> <a href="#" class="button button--light-green">Join Now</a></li>
+                    <li> <a href="joinNow.html" class="button button--light-green">Join Now</a></li>
                 </ul>
 
             </div>
