Prevent contact form from coming to close to edge of user's screen

--- a/joinNow.html
+++ b/joinNow.html
@@ -40,24 +40,27 @@
 
     <div class="main">
         <div class="section contact">
-            <div class="contact__items">
-                <div class="contact__form">
-                    <h2 class="contact__form-header">Fill out the Form below to get Started</h2>
-                    <div class="contact__form-group">
-                        <label class = "contact__form-label"> Name
-                            <input type="text" class="contact__form-text-input">
-                        </label>
-                        <label class = "contact__form-label"> Email Address
-                            <input type="text" class="contact__form-text-input">
-                        </label>
-                        <label class = "contact__form-label"> Message
-                            <textarea class="contact__form-text-input contact__form-text-area"></textarea>
-                        </label>
-                        <button class="contact__form-button button button--dark-green" type = "submit"> Send Message </button>
+            <div class="container">
+                <div class="contact__items">
+                    <div class="contact__form">
+                        <h2 class="contact__form-header">Fill out the Form below to get Started</h2>
+                        <div class="contact__form-group">
+                            <label class="contact__form-label"> Name
+                                <input type="text" class="contact__form-text-input">
+                            </label>
+                            <label class="contact__form-label"> Email Address
+                                <input type="text" class="contact__form-text-input">
+                            </label>
+                            <label class="contact__form-label"> Message
+                                <textarea class="contact__form-text-input contact__form-text-area"></textarea>
+                            </label>
+                            <button class="contact__form-button button button--dark-green" type="submit"> Send Message
+                            </button>
+                        </div>
                     </div>
-                </div>
-                <div class="contact__map">
+                    <div class="contact__map">
 
+                    </div>
                 </div>
             </div>
         </div>
