Add location on google map

--- a/joinNow.html
+++ b/joinNow.html
@@ -43,7 +43,7 @@
             <div class="container">
                 <div class="contact__items">
                     <div class="contact__form">
-                        <h2 class="contact__form-header">Fill out the Form below to get Started</h2>
+                        <h2 class="contact__form-header"></h2>
                         <div class="contact__form-group">
                             <label class="contact__form-label"> Name
                                 <input type="text" class="contact__form-text-input">
@@ -83,6 +83,8 @@
     </footer>
 
     <script src="js/main.js"></script>
+    <script src="js/map.js"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAYKH07gUlZ9vfy0npVKXauMSxV7hCXKvI&callback=initializeMap" async defer></script>
 </body>
 
 </html>
