Fix broken link in navigation menu

--- a/joinNow.html
+++ b/joinNow.html
@@ -19,7 +19,7 @@
         <div class="container">
             <div class="hero__navigation">
                 <h2 class="hero__brand">
-                    <a href="#" class="button button--light-green"> <span class="hilight"> Titan </span> Fitness</a>
+                    <a href="index.html" class="button button--light-green"> <span class="hilight"> Titan </span> Fitness</a>
                 </h2>
 
                 <i class="fas fa-bars hamburger-menu"></i>
@@ -43,7 +43,6 @@
             <div class="container">
                 <div class="contact__items">
                     <div class="contact__form">
-                        <h2 class="contact__form-header"></h2>
                         <div class="contact__form-group">
                             <label class="contact__form-label"> Name
                                 <input type="text" class="contact__form-text-input">
