--- a/classes.html
+++ b/classes.html
@@ -19,7 +19,7 @@
         <div class="container">
             <div class="hero__navigation">
                 <h2 class="hero__brand">
-                    <a href="#" class="button button--light-green"> <span class="hilight"> Titan </span> Fitness</a>
+                    <a href="index.html" class="button button--light-green"> <span class="hilight"> Titan </span> Fitness</a>
                 </h2>
 
                 <i class="fas fa-bars hamburger-menu"></i>
