Fix typos on home page

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                     <ul class="vertical-list membership__card-offerings">
                         <li>Unlimited gym access</li>
                         <li>10 classes</li>
-                        <li>3 training session</li>
+                        <li>3 training sessions</li>
                         <li>4 massages</li>
                     </ul>
                     <a href="joinNow.html" class="button button--dark-green">Choose it</a>
@@ -99,7 +99,7 @@
                     <ul class="vertical-list membership__card-offerings">
                         <li>Unlimited gym access</li>
                         <li>25 classes</li>
-                        <li>10 training session</li>
+                        <li>10 training sessions</li>
                         <li>15 massages</li>
                     </ul>
                     <a href="joinNow.html" class="button button--dark-green">Choose it</a>
@@ -112,7 +112,7 @@
                         <ul class="vertical-list membership__card-offerings">
                             <li>Unlimited gym access</li>
                             <li>40 classes</li>
-                            <li>20 training session</li>
+                            <li>20 training sessions</li>
                             <li>30 massages</li>
                         </ul>
                         <a href="joinNow.html" class="button button--dark-green">Choose it</a>
