--- a/joinNow.html
+++ b/joinNow.html
@@ -82,6 +82,7 @@
     </footer>
 
     <script src="js/main.js"></script>
+    <script src = "js/submit.js"></script>
     <script src="js/map.js"></script>
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAYKH07gUlZ9vfy0npVKXauMSxV7hCXKvI&callback=initializeMap" async defer></script>
 </body>
