--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="apple-touch-icon" sizes="180x180" href="images/favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="images/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="images/favicon/favicon-16x16.png">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
         integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
@@ -19,7 +22,8 @@
         <div class="container">
             <div class="hero__navigation">
                 <h2 class="hero__brand">
-                    <a href="index.html" class="button button--light-green"> <span class="hilight"> Titan </span> Fitness</a>
+                    <a href="index.html" class="button button--light-green"> <span class="hilight"> Titan </span>
+                        Fitness</a>
                 </h2>
 
                 <i class="fas fa-bars hamburger-menu"></i>
